# FindIDL

./: .gitmodules  LICENSE  README.md  appveyor.yml
cmake/: FindIDL.cmake  FindTLBIMP.cmake
samples/: CMakeLists.txt
samples/Demo/: CMakeLists.txt
samples/Demo/GreeterIDL/: CMakeLists.txt  Greeter.idl
samples/Demo/GreeterIDLWithTLBIMP/: CMakeLists.txt  Greeter.idl
samples/Demo/GreeterLib/: CMakeLists.txt  Export.def  Greeter.aps  Greeter.cpp  Greeter.h  Greeter.rc  Greeter.rgs  dllmain.cpp  resource.h  stdafx.h
samples/Demo/Main/: CMakeLists.txt  Main.cpp
samples/Demo/MainCpp/: CMakeLists.txt
samples/Demo/MainCsharp/: CMakeLists.txt  Main.cs
samples/Demo/MainTLBIMP/: CMakeLists.txt  main.cs
samples/Demo/MainWithTLBIMP/: CMakeLists.txt  main.cs
